Bug 1958876 - Newtab fixing banner position and horizontal scrollbar r=home-newtab-reviewers,maxx
Differential Revision: https://phabricator.services.mozilla.com/D246819

--- a/browser/extensions/newtab/content-src/components/DiscoveryStreamBase/_DiscoveryStreamBase.scss
+++ b/browser/extensions/newtab/content-src/components/DiscoveryStreamBase/_DiscoveryStreamBase.scss
@@ -20,7 +20,8 @@ $ds-width: 936px;
   }
 
   .ds-column-grid {
-    display: grid;
+    display: flex;
+    flex-direction: column;
     grid-row-gap: var(--gridRowGap);
 
     // We want to completely hide components with no content,
